# venus_vibe_deck

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  README.zh-CN.md  claude_task_history.json  package-lock.json  package.json  spec.md  start.sh
client/: index.html  package.json  tsconfig.json  vite.config.ts
client/public/: manifest.json  sw.js
client/src/: App.tsx  index.css  main.tsx  types.ts
client/src/api/: http.ts
client/src/components/: AboutPanel.tsx  AuthGate.tsx  ControlPanel.tsx  NewSessionPanel.tsx  SessionHistoryPanel.tsx  SettingsPage.tsx  SpeechTestPanel.tsx  StatusBar.tsx  Terminal.tsx  WorkspacePicker.tsx
client/src/hooks/: useBrowserSpeechRecognition.ts  useWebSocket.ts  (+1 more)
config/: settings.json
docs/: session-lifecycle.md  spec-ui.md  stt.md  tts.md  voice-input.md  web-push-notifications.md
docs/architecture/: README.md  agent-collaboration.md  mobile-native-shell.md
docs/data/: speech-eval-result.md  speech.jsonl
docs/helps/: user-guide.md  user-guide.zh-CN.md
docs/reference/: tts-clone.md  tts.md  voice.py
server/: package.json  tsconfig.json
server/config/: settings.json  voice-refine-prompt.md
server/src/: auth.ts  config.ts  env.ts  index.ts  logger.ts  protocol.ts  runtimeSettings.ts  static.ts
stt-server/: .dockerignore  .gitignore  Dockerfile  README.md  claude_task_history.json  docker-compose.yml  pyproject.toml  start.sh
stt-server/src/stt_server/: config.py  main.py
stt-server/src/stt_server/providers/: base.py  sensevoice.py
stt-server/test/: .env.example  readme.md  test_asr.py  test_tts.py
(+27 files in other folders)
