[project]
name = "stt-server"
version = "0.1.0"
description = "本地语音识别服务 - SenseVoice"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "numpy>=1.26.0",
    "funasr>=1.1.0",
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
]

[project.optional-dependencies]
dev = ["httpx>=0.27.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stt_server"]
